--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <licenses>
         <license>
             <name>MIT</name>
-            <url>https://raw.github.com/leonardinius/webjars-holderjs/master/LICENSE</url>
+            <url>http://opensource.org/licenses/MIT</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
