--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>holderjs</artifactId>
-    <version>2.1.0</version>
+    <version>2.1.0-SNAPSHOT</version>
 
     <name>webjars-holderjs</name>
     <description>WebJar for holder.js</description>
@@ -34,9 +34,9 @@
     </licenses>
 
     <scm>
-        <url>http://github.com/webjars/webjars-holderjs</url>
-        <connection>scm:git:https://github.com/webjars/webjars-holderjs.git</connection>
-        <developerConnection>scm:git:https://github.com/webjars/webjars-holderjs.git</developerConnection>
+        <url>http://github.com/webjars/holderjs</url>
+        <connection>scm:git:https://github.com/webjars/holderjs.git</connection>
+        <developerConnection>scm:git:https://github.com/webjars/holderjs.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
     
@@ -44,7 +44,7 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <upstream.version>v2.1.0</upstream.version>
+        <upstream.version>2.1.0</upstream.version>
         <upstream.url>https://github.com/imsky/holder/archive</upstream.url>
         <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${upstream.version}</destDir>
     </properties>
@@ -63,7 +63,7 @@
                         </goals>
                         <configuration>
                             <url>${upstream.url}</url>
-                            <fromFile>${upstream.version}.zip</fromFile>
+                            <fromFile>v${upstream.version}.zip</fromFile>
                             <toFile>${project.build.directory}/${project.artifactId}.zip</toFile>
                         </configuration>
                     </execution>
@@ -83,7 +83,7 @@
                                 <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}/${project.artifactId}" />
                                 <echo message="moving resources" />
                                 <move todir="${destDir}">
-                                    <fileset dir="${project.build.directory}/${project.artifactId}/holder-${project.version}" />
+                                    <fileset dir="${project.build.directory}/${project.artifactId}/holder-${upstream.version}" />
                                 </move>
                             </target>
                         </configuration>
@@ -96,12 +96,6 @@
                 <version>2.3.2</version>
             </plugin>
         </plugins>
-        <resources>
-            <resource>
-                <directory>${project.basedir}/src/main/resources</directory>
-                <targetPath>${destDir}</targetPath>
-            </resource>
-        </resources>
     </build>
 
 </project>
