--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>holderjs</artifactId>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>2.1.0</version>
 
     <name>webjars-holderjs</name>
     <description>WebJar for holder.js</description>
@@ -37,10 +37,10 @@
         <url>http://github.com/webjars/holderjs</url>
         <connection>scm:git:https://github.com/webjars/holderjs.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/holderjs.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>holderjs-2.1.0</tag>
     </scm>
     
-    <dependencies></dependencies>
+    <dependencies />
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
