--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>holderjs</artifactId>
-    <version>2.4.0</version>
+    <version>2.4.1-SNAPSHOT</version>
 
     <name>webjars-holderjs</name>
     <description>WebJar for holder.js</description>
@@ -37,7 +37,7 @@
         <url>http://github.com/webjars/holderjs</url>
         <connection>scm:git:https://github.com/webjars/holderjs.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/holderjs.git</developerConnection>
-        <tag>holderjs-2.4.0</tag>
+        <tag>HEAD</tag>
     </scm>
     
     <dependencies />
